# dz1_multithread

./: CMakeLists.txt  Makefile  README.md
exe/: CMakeLists.txt  main.cpp
include/: realisation.hpp
tests/integration/: test_integr.py
tests/unit/: CMakeLists.txt  tests.cpp
